--- a/src/scss/team.scss
+++ b/src/scss/team.scss
@@ -1,5 +1,6 @@
 .team {
-    padding: 0 50px;
+    font-family: 'Oswald', sans-serif;
+    padding: 50px 0;
 
     &__title {
         margin: 0 0 20px 0;
